# python-webapp-manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app_manager/: __init__.py  __main__.py  app.py
app_manager/core/: __init__.py  config_checks.py  controller.py  discovery.py  health.py  installation.py  process_runner.py  registry.py  runtime_store.py  service_inspect.py  service_runner.py  subprocess_utils.py  updater.py  winsw.py
app_manager/models/: __init__.py  config.py  discovery.py  manager.py  runtime.py  scan_ignore.py
app_manager/ui/: app_config_dialog.py  discovery_dialog.py  log_viewer.py  main_window.py  manager_settings_dialog.py  theme.py
configs/: manager.json  manager.json.example
configs/apps/: example.app.json.example
docs/: CONNECTING_APPS.md  INSTALL_WINDOWS.md
tests/: test_app_config_dialog.py  test_config_checks.py  test_controller.py  test_discovery.py  test_health.py  test_installation.py  test_manager_config.py  test_process_runner.py  test_registry.py  test_scan_ignore.py  test_service_inspect.py  test_service_runner.py  test_subprocess_utils.py  test_updater.py  test_winsw.py
