[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-manager"
version = "0.1.0"
description = "Windows desktop manager for internal Python web apps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[project.scripts]
app-manager = "app_manager.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app_manager*"]
